# SeeRM

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE_CONTEXT.md  HOW_TO_USE.txt  INTELLIGENCE_REPORTS.md  QUICK_START_TIERED_LLM.md  README.md  SALES_SETUP.md  TIERED_LLM_PR_SUMMARY.md  customer_intel_v2_guide.md  debug_97labs.py  debug_csv_parsing.py  debug_gmail_search.py  debug_intel_schema.py  debug_schema_simple.py  pyproject.toml  requirements.txt  run_intel_test.sh  simple_debug_97labs.py  test_baseline_local.py  test_baseline_simple.py  test_csv_fetch.py  test_intel_api.py  test_intel_archive.py  test_minimal_intel_write.py  test_query_generation.py
.github/workflows/: analysis_job.yml  baseline.yml  enrich_funding.py  funding_refresh.yml  kickoff_dossier.yml  main.yml  news.yml  news_cli.yml  news_refactored.yml  preflight  preflight.yml  probe_domain.yml  probe_funding.yml  release.yml  seerm-v2-weekly.yml  test.yml  testnews.yml
Email_Automations/: seerm-greeting.sh
app/: config.yaml  digest_render.py  dossier_baseline.py  enrich_funding.py  gmail_client.py  main.py  news_job.py  notion_client.py  parser.py  performance_utils.py
apps/messaging_consumer/: README.md  greeting_preview.html  pyproject.toml
apps/messaging_consumer/fixtures/: sample_report.json
apps/messaging_consumer/schema/: weekly_news_digest.schema.json
apps/messaging_consumer/scripts/: check_notion_company.py  test_notion_credentials.py
apps/messaging_consumer/src/messaging_consumer/: __init__.py  cli.py  config.py  gmail.py  gmail_template.py  greetings.py  llm.py  notion_ingest.py
apps/messaging_consumer/templates/: greeting_template.html
apps/messaging_consumer/tests/: conftest.py  test_contract.py  test_notion_context.py  test_prompt_builder.py
docs/: TIERED_LLM_SYSTEM.md  mac_onboarding.md
docs/messaging_consumer/template/: README.md  pyproject.toml
docs/messaging_consumer/template/src/messaging_consumer/: __init__.py  contracts.py  notion_ingest.py
files/: Copy of Specter - Mercury [Enrichment Sample] - Mercury Data.csv  SeeRM Master Query_2025-09-01T09_05_03.416470514Z.csv  Will Accounts Demographics_2025-09-01T09_09_22.742205229Z.csv  update_manifest.template.json
scripts/: build_binary.sh  build_wheel.sh  domain_resolver.py  probe_domain.py  probe_funding.py
shared/: __init__.py
tests/: __init__.py  conftest.py  sample_data.py  test_csv_parser.py  test_digest_service.py  test_integration.py  test_llm_research_pipeline.py  test_news_collector_queries.py  test_news_relevance.py  test_performance_improvements.py  test_reliability.py  test_robust_email_delivery.py  test_weekly_news_rendering_links.py
(+162 files in other folders)
