[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messaging-consumer"
version = "0.1.0"
description = "Automation that consumes SeeRM outputs and crafts outbound/inbound-ready copy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.6.0",
    "jsonschema>=4.22.0",
    "notion-client>=2.2.1,<2.4.0",
    "structlog>=23.3.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "google-api-python-client>=2.137.0",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-jsonschema",
]

[tool.setuptools.packages.find]
where = ["src"]
